--- a/salt/nginx/map.jinja
+++ b/salt/nginx/map.jinja
@@ -2,5 +2,11 @@
     'default': {
         'keepalive_timeout': 120,
         'install_from_source': True,
+        'log_formats': {
+            'main': '$remote_addr - $remote_user [$time_local] $http_host "$request" $status $body_bytes_sent $request_time $upstream_response_time "$http_referer" "$http_user_agent" "$http_x_forwarded_for"',
+        },
+        'log_files': {
+            'access.log': 'main'
+        },
     },
 }, merge=salt['pillar.get']('nginx')) %}
