Enable customizing the http block from pillar

--- a/salt/nginx/map.jinja
+++ b/salt/nginx/map.jinja
@@ -8,5 +8,6 @@
         'log_files': {
             'access.log': 'main'
         },
+        'extra_http': [],
     },
 }, merge=salt['pillar.get']('nginx')) %}
