--- a/salt/nginx/map.jinja
+++ b/salt/nginx/map.jinja
@@ -9,5 +9,8 @@
             'access.log': 'main'
         },
         'extra_http': [],
+        'package': 'nginx',
+        'repo': 'deb https://nginx.org/packages/mainline/debian/ jessie nginx',
+        'repo_key_url': 'https://nginx.org/keys/nginx_signing.key',
     },
 }, merge=salt['pillar.get']('nginx')) %}
