--- a/salt/nginx/map.jinja
+++ b/salt/nginx/map.jinja
@@ -13,5 +13,6 @@
         'repo': 'deb https://nginx.org/packages/mainline/debian/ jessie nginx',
         'repo_key_url': 'https://nginx.org/keys/nginx_signing.key',
         'dh_keysize': 4096,
+        'allow_plaintext': True,
     },
 }, merge=salt['pillar.get']('nginx')) %}
