iptables: Load blocklist from map

--- a/salt/iptables/map.jinja
+++ b/salt/iptables/map.jinja
@@ -3,5 +3,6 @@
 {% set iptables = salt['grains.filter_by']({
     'default': {
         'output_policy': 'ACCEPT',
+        'blocklist': [],
     },
 }, merge=pillar_get('iptables')) %}
