--- a/salt/nginx/map.jinja
+++ b/salt/nginx/map.jinja
@@ -1,5 +1,5 @@
 {% set nginx = salt['grains.filter_by']({
-    'default': {
+    'base': {
         'keepalive_timeout': 120,
         'install_from_source': True,
         'log_formats': {
@@ -17,4 +17,7 @@
         'add_default_https': True,
         'add_default_http': True,
     },
-}, merge=salt['pillar.get']('nginx')) %}
+    'stretch': {
+        'repo': 'deb https://nginx.org/packages/mainline/debian/ stretch nginx',
+    }
+}, grain='oscodename', merge=salt['pillar.get']('nginx'), base='base') %}
