Enable customizing nginx reload interval

--- a/salt/nginx/map.jinja
+++ b/salt/nginx/map.jinja
@@ -16,6 +16,9 @@
         'allow_plaintext': True,
         'add_default_https': True,
         'add_default_http': True,
+        'regular_reload': {
+            'minute': 'random',
+        }
     },
     'stretch': {
         'repo': 'deb https://nginx.org/packages/mainline/debian/ stretch nginx',
