Enable customizing install location

--- a/salt/android-sdk/map.jinja
+++ b/salt/android-sdk/map.jinja
@@ -4,5 +4,6 @@
     },
     'Darwin': {
         'version_spec': '3859397 sha256=4a81754a760fce88cba74d69c364b05b31c53d57b26f9f82355c61d5fe4b9df9',
+        'install_location': '/usr/local',
     },
 }, grain='kernel', merge=salt['pillar.get']('android_sdk')) %}
