Enable loading nginx extension modules

--- a/salt/nginx/map.jinja
+++ b/salt/nginx/map.jinja
@@ -18,7 +18,8 @@
         'add_default_http': True,
         'regular_reload': {
             'minute': 'random',
-        }
+        },
+        'modules': [],
     },
     'stretch': {
         'repo': 'deb https://nginx.org/packages/mainline/debian/ stretch nginx',
