--- a/salt/nginx/map.jinja
+++ b/salt/nginx/map.jinja
@@ -20,6 +20,8 @@
             'minute': 'random',
         },
         'modules': [],
+        'cache_bypass': None,
+        'cache_use_stale': 'error timeout http_500 http_502 http_503 http_504',
     },
     'stretch': {
         'repo': 'deb https://nginx.org/packages/mainline/debian/ stretch nginx',
