--- a/salt/nginx/map.jinja
+++ b/salt/nginx/map.jinja
@@ -21,7 +21,7 @@
         },
         'modules': [],
         'cache_bypass': None,
-        'cache_use_stale': 'error timeout http_500 http_502 http_503 http_504',
+        'cache_use_stale': 'error timeout updating http_500 http_502 http_503 http_504',
     },
     'stretch': {
         'repo': 'deb https://nginx.org/packages/mainline/debian/ stretch nginx',
