Enable customizing whether to use bg updates

--- a/salt/nginx/map.jinja
+++ b/salt/nginx/map.jinja
@@ -20,6 +20,7 @@
             'minute': 'random',
         },
         'modules': [],
+        'cache_background_update': True,
         'cache_bypass': None,
         'cache_use_stale': 'error timeout updating http_500 http_502 http_503 http_504',
     },
