Set nginx resolver by default

--- a/salt/nginx/map.jinja
+++ b/salt/nginx/map.jinja
@@ -27,6 +27,7 @@
         'ssl_session_timeout': '30m',
         'cache_max_size': '100m',
         'cache_inactive': '60m',
+        'resolver_timeout': '5s',
     },
     'stretch': {
         'repo': 'deb https://nginx.org/packages/mainline/debian/ stretch nginx',
