Load nginx tls protocols from pillar

--- a/salt/nginx/map.jinja
+++ b/salt/nginx/map.jinja
@@ -28,6 +28,7 @@
         'cache_max_size': '100m',
         'cache_inactive': '60m',
         'resolver_timeout': '5s',
+        'tls_protocols': ['TLSv1', 'TLSv1.1', 'TLSv1.2', 'TLSv1.3'],
     },
     'stretch': {
         'repo': 'deb https://nginx.org/packages/mainline/debian/ stretch nginx',
