--- a/salt/vault/map.jinja
+++ b/salt/vault/map.jinja
@@ -8,6 +8,13 @@
                 'tcp': {
                     'tls_cert_file': '/etc/vault/cert.pem',
                     'tls_key_file': '/etc/vault/key.pem',
+                    'tls_prefer_server_ciphers': 'true',
+                    'tls_cipher_suites': ','.join([
+                        'TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384',
+                        'TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256',
+                        'TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305',
+                        'TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256',
+                    ]),
                 },
             },
         },
