--- a/salt/vault/map.jinja
+++ b/salt/vault/map.jinja
@@ -1,9 +1,18 @@
-{% set pillar_get = salt['pillar.get'] %}
+{% set pillar_vault = pillar.get('vault', {}) %}
+
+{% set api_addr = pillar_vault.get('api_addr') %}
+{% if not api_addr %}
+    {% set interfaces = grains.get('ip4_interfaces', {}) %}
+    {% set lo = interfaces.pop('lo') %} {# just to remove it from the map #}
+    {% set nonlocal_interface = interfaces.popitem()[1] %}
+    {% set api_addr = 'https://' + nonlocal_interface[0] %}
+{% endif %}
 
 {% set vault = salt['grains.filter_by']({
     'default': {
         'version_spec': '1.3.2 sha256=6e72132de0421b74d909f50be1823fe57182694c4268ba9a38c31213d9497ec9',
         'config': {
+            'api_addr': api_addr,
             'listener': {
                 'tcp': {
                     'tls_cert_file': '/etc/vault/cert.pem',
@@ -18,4 +27,4 @@
             },
         },
     },
-}, merge=pillar_get('vault')) %}
+}, merge=pillar_vault) %}
