Add guard against missing lo

--- a/salt/vault/map.jinja
+++ b/salt/vault/map.jinja
@@ -3,7 +3,7 @@
 {% set api_addr = pillar_vault.get('api_addr') %}
 {% if not api_addr %}
     {% set interfaces = grains.get('ip4_interfaces', {}) %}
-    {% set lo = interfaces.pop('lo') %} {# just to remove it from the map #}
+    {% set lo = interfaces.pop('lo') if 'lo' in interfaces else None %} {# just to remove it from the map #}
     {% set nonlocal_interface = interfaces.popitem()[1] %}
     {% set api_addr = 'https://' + nonlocal_interface[0] + ':8200' %}
 {% endif %}
