--- a/salt/vault/map.jinja
+++ b/salt/vault/map.jinja
@@ -2,7 +2,7 @@
 
 {% set api_addr = pillar_vault.get('api_addr') %}
 {% if not api_addr %}
-    {% set interfaces = grains.get('ip4_interfaces', {}) %}
+    {% set interfaces = grains.get('ip4_interfaces', {}).copy() %}
     {% set lo = interfaces.pop('lo') if 'lo' in interfaces else None %} {# just to remove it from the map #}
     {% set nonlocal_interface = interfaces.popitem()[1] %}
     {% set api_addr = 'https://' + nonlocal_interface[0] + ':8200' %}
