--- a/salt/vault/map.jinja
+++ b/salt/vault/map.jinja
@@ -15,7 +15,7 @@
             'api_addr': api_addr,
             'listener': {
                 'tcp': {
-                    'tls_cert_file': '/etc/vault/cert.pem',
+                    'tls_cert_file': '/etc/vault-ca.pem',
                     'tls_key_file': '/etc/vault/key.pem',
                     'tls_prefer_server_ciphers': 'true',
                     'tls_cipher_suites': ','.join([
