Only use ssh privilege separation where necessary
Avoids warnings on >7.5 where it's deprecated and on by default.

--- a/salt/openssh-server/map.jinja
+++ b/salt/openssh-server/map.jinja
@@ -29,5 +29,9 @@
         'allow_users': [],
         'minumum_modulus_size': 2048,
         'listen_addresses': [],
+        'use_deprecated_privilege_separation': False,
     },
-}, merge=pillar_get('openssh_server')) %}
+    'stretch': {
+        'use_deprecated_privilege_separation': True,
+    }
+}, grain='oscodename', merge=pillar_get('openssh_server')) %}
