Set a ssh pillar base

--- a/salt/openssh-server/map.jinja
+++ b/salt/openssh-server/map.jinja
@@ -1,7 +1,7 @@
 {% set pillar_get = salt['pillar.get'] %}
 
 {% set openssh_server = salt['grains.filter_by']({
-    'default': {
+    'base': {
         'port': 22,
         'kex_algorithms': [
             'curve25519-sha256@libssh.org',
@@ -34,4 +34,4 @@
     'stretch': {
         'use_deprecated_privilege_separation': True,
     }
-}, grain='oscodename', merge=pillar_get('openssh_server')) %}
+}, grain='oscodename', merge=pillar_get('openssh_server'), base='base') %}
