--- a/salt/openssh-server/map.jinja
+++ b/salt/openssh-server/map.jinja
@@ -23,6 +23,16 @@
             'hmac-sha2-256',
             'umac-128@openssh.com',
         ],
+        'host_key_algorithms': [
+            'ecdsa-sha2-nistp256-cert-v01@openssh.com',
+            'ecdsa-sha2-nistp384-cert-v01@openssh.com',
+            'ecdsa-sha2-nistp521-cert-v01@openssh.com',
+            'ssh-ed25519-cert-v01@openssh.com',
+            'ecdsa-sha2-nistp256',
+            'ecdsa-sha2-nistp384',
+            'ecdsa-sha2-nistp521',
+            'ssh-ed25519',
+        ],
         'allow_groups': [
             'ssh',
         ],
