--- a/salt/rabbitmq/map.jinja
+++ b/salt/rabbitmq/map.jinja
@@ -1,7 +1,6 @@
 {% set rabbitmq = salt['grains.filter_by']({
     'base': {
-        'management_ssl_port': 15671,
         'management_port': 15672,
-        'management_plaintext': False,
+        'management_expose_plaintext': False,
     },
 }, merge=salt['pillar.get']('rabbitmq'), base='base') %}
