Enable es version to be set from pillar

--- a/salt/elasticsearch/map.jinja
+++ b/salt/elasticsearch/map.jinja
@@ -2,6 +2,7 @@
 
 {% set elasticsearch = salt['grains.filter_by']({
     'default': {
-        'initial_master_nodes': [grains.id]
+        'initial_master_nodes': [grains.id],
+        'version': '7.7.1'
     },
 }, merge=pillar_get('elasticsearch')) %}
