Enable running postgres without ssl

--- a/salt/postgres/map.jinja
+++ b/salt/postgres/map.jinja
@@ -4,6 +4,7 @@
     'default': {
         'version': '9.4',
         'internal': True,
+        'internal_nossl': False,
         'shared_buffers': '128MB',
         'cert_auth': False,
     },
