--- a/salt/nginx/map.jinja
+++ b/salt/nginx/map.jinja
@@ -36,4 +36,10 @@
     'buster': {
         'repo': 'deb https://nginx.org/packages/mainline/debian/ buster nginx',
     },
+    'bullseye': {
+        'repo': 'deb https://nginx.org/packages/mainline/debian/ bullseye nginx',
+    },
+    'bookworm': {
+        'repo': 'deb https://nginx.org/packages/mainline/debian/ bookworm nginx',
+    },
 }, grain='oscodename', merge=salt['pillar.get']('nginx'), base='base') %}
